selfhost/test/parser/match_error_no_expr.out
Error at %FILE_NAME%:1:17
Unexpected token '=>':
  |  match { Foo.Bar => true, Foo.Baz => false }
                     ^